--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Endouble News</title>
+    <script crossorigin="anonymous" src="https://polyfill.io/v3/polyfill.min.js?features=default%2CArray.prototype.find%2Cfetch"></script>
 </head>
 
 <body>
